# itscm_exerices_C_tableaux

./: CMakeLists.txt
exercice1/: CMakeLists.txt  main.c
exercice10/: CMakeLists.txt  main.c
exercice11/: CMakeLists.txt  main.c
exercice12/: CMakeLists.txt  main.c
exercice13/: CMakeLists.txt  main.c
exercice14/: CMakeLists.txt  main.c
exercice15/: CMakeLists.txt  main.c
exercice16/: CMakeLists.txt  main.c
exercice17/: CMakeLists.txt  main.c
exercice18/: CMakeLists.txt  main.c
exercice19/: CMakeLists.txt  main.c
exercice2/: CMakeLists.txt  main.c
exercice20/: CMakeLists.txt  main.c
exercice21/: CMakeLists.txt  main.c
exercice22/: CMakeLists.txt  main.c
exercice23/: CMakeLists.txt  main.c
exercice24/: CMakeLists.txt  main.c
exercice3/: CMakeLists.txt  main.c
exercice4/: CMakeLists.txt  main.c
exercice5/: CMakeLists.txt  main.c
exercice6/: CMakeLists.txt  main.c
exercice7/: CMakeLists.txt  main.c
exercice8/: CMakeLists.txt  main.c
exercice9/: CMakeLists.txt  main.c
exerciceCours1/: CMakeLists.txt  main.c
