cmake_minimum_required(VERSION 3.30)
project(exerciceTableaux C)

set(CMAKE_C_STANDARD 23)

add_subdirectory(exercice1)
add_subdirectory(exercice2)
add_subdirectory(exercice3)
add_subdirectory(exercice4)
add_subdirectory(exercice5)
add_subdirectory(exercice6)
add_subdirectory(exercice7)
add_subdirectory(exercice8)
add_subdirectory(exercice9)
add_subdirectory(exercice10)
add_subdirectory(exercice11)
add_subdirectory(exercice12)
add_subdirectory(exercice13)
add_subdirectory(exercice14)
add_subdirectory(exercice15)
add_subdirectory(exercice16)
add_subdirectory(exercice17)
add_subdirectory(exercice18)
add_subdirectory(exercice19)
add_subdirectory(exercice20)
add_subdirectory(exercice21)
add_subdirectory(exercice22)
add_subdirectory(exercice23)
add_subdirectory(exercice24)
add_subdirectory(exerciceCours1)

